fixed h1 in Header() to be text-align: center

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
 	border-radius: 10px;
 }
 
+h1 {
+	text-align: center;
+}
+
 .list-container {
 	border: none;
 }
